crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__missing_rhs_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bin_op/missing_rhs_1.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            12,
        ),
        range: 0..18,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 0..11,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(
                                6,
                            ),
                            range: 0..11,
                            left: BinOp(
                                ExprBinOp {
                                    node_index: NodeIndex(
                                        2,
                                    ),
                                    range: 0..5,
                                    left: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                0,
                                            ),
                                            range: 0..1,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    op: Add,
                                    right: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                1,
                                            ),
                                            range: 4..5,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            op: Sub,
                            right: BinOp(
                                ExprBinOp {
                                    node_index: NodeIndex(
                                        5,
                                    ),
                                    range: 8..11,
                                    left: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                3,
                                            ),
                                            range: 8..9,
                                            value: Int(
                                                3,
                                            ),
                                        },
                                    ),
                                    op: Mult,
                                    right: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                4,
                                            ),
                                            range: 11..11,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        11,
                    ),
                    range: 13..18,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(
                                10,
                            ),
                            range: 13..18,
                            left: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(
                                        8,
                                    ),
                                    range: 13..14,
                                    value: Int(
                                        4,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(
                                        9,
                                    ),
                                    range: 17..18,
                                    value: Int(
                                        5,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | 1 + 2 - 3 *
  |            ^ Syntax Error: Expected an expression
2 |
3 | 4 + 5
  |
